Fix display of code blocks in change descriptions (Review Board version).
The way full-width code blocks were shown in change descriptions was incorrect
(things were offset oddly to the left, and there was a big extra margin added
at the bottom).

The fix involves changes to both djblets and Review Board. This change contains
the Review Board side, which provides overrides for specific occurrences, such
as review request fields and change descriptions.

Testing done:
Verified the appearance of full-width code blocks in:
- Review request fields.
- The change description field in the review request draft header.
- The change description field in change description boxes.
- Field change diffs in change description boxes.
- Comments and headers in the review dialog.
- Comments and headers in reviews.
- Draft replies to reviews.
- Diff comment flag pop-ups.

Checked that all affected text editors with full-width code blocks didn't have
any vertical jumps when opening or closing the editor.

Reviewed at https://reviews.reviewboard.org/r/8364/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -666,14 +666,6 @@
 /****************************************************************************
  * Change Descriptions
  ****************************************************************************/
-#field_changedescription {
-  white-space: pre-wrap;
-  background-color: @textarea-editor-background;
-  border: @textarea-border;
-  margin: @textarea-editor-margin;
-  padding: @textarea-editor-padding;
-}
-
 .changedesc {
   &.box {
     background-color: #fefadf;
@@ -817,6 +809,11 @@
     /* The "Change Summary" section. */
     .changedesc-text {
       margin-bottom: 2em;
+      overflow: hidden;
+
+      .codehilite {
+        .flush-codehilite();
+      }
 
       &:last-child {
         margin-bottom: 0;
@@ -848,6 +845,11 @@
         padding: 2px 4px;
         vertical-align: top;
         white-space: pre-wrap;
+
+	.codehilite {
+	  // Make this flush with the sides of the row.
+	  margin: 0 -4px;
+	}
       }
 
       .delete {
@@ -2269,8 +2271,9 @@
 #review-form,
 #reviews .review .body {
   .rich-text {
-    margin-left: (@textarea-editor-padding + @textarea-border-size);
-    margin-top: (@textarea-editor-margin-top + @textarea-editor-padding +
-                 @textarea-border-size);
+    margin: (@textarea-editor-margin-top + @textarea-editor-padding +
+             @textarea-border-size)
+            (@textarea-editor-padding + @textarea-border-size)
+            0;
   }
 }
